<resources>
    <string name="app_name">TestApp1</string>
    <string name="food1">Face to face</string>
    <string name="food2">Hinz</string>
    <string name="food3">Mama rice</string>
    <string name="food4">Rue Yue Ming</string>
    <string name="food5">Mcdonald</string>
    <string name="food6">Dpulze</string>

    <string-array name="cyberjayaFood">
        <item>Face to face</item>
        <item>Hinz</item>
        <item>Mama rice</item>
        <item>Re Yue Ming</item>
        <item>Mcdonald</item>
        <item>KFC</item>
        <item>Dpulze</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>