<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addBtnActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add / Delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/txtAddDelete"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:layout_marginTop="25dp"
        android:textColor="@color/teal_700"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:layout_below="@+id/txtAddDelete"
        android:layout_marginTop="200dp"
        android:id="@+id/foodTable">

        <TableRow>
            <TextView
                android:text="@string/food1"
                android:padding="3dip"
                android:layout_marginLeft="100dp"/>
            <TextView
                android:text="@string/food2"
                android:padding="3dip"
                android:layout_marginLeft="15dp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/food3"
                android:padding="3dip"
                android:layout_marginLeft="100dp"/>
            <TextView
                android:text="@string/food4"
                android:padding="3dip"
                android:layout_marginLeft="15dp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/food5"
                android:padding="3dip"
                android:layout_marginLeft="100dp"/>
            <TextView
                android:text="@string/food6"
                android:padding="3dip"
                android:layout_marginLeft="15dp"/>
        </TableRow>

    </TableLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        android:layout_below="@+id/foodTable"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="250dp"/>

</RelativeLayout>